--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "port": "5000"
     },
     "database": {
-        "host": "us-cdbr-east-03.cleardb.com/heroku_0c5f05934c6b777?reconnect=true",
+        "host": "us-cdbr-east-03.cleardb.com",
         "user": "b7ef31a3f8ac4c",
         "password": "e7d4c27e",
         "db": "heroku_0c5f05934c6b777",
